k8s-example/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: grafana-svc
  namespace: monitoring
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    name: dev-grafana-dm
  type: NodePort
